@@ -158,6 +158,20 @@ name|lucene
 operator|.
 name|search
 operator|.
+name|BoostQuery
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
 name|ConstantScoreQuery
 import|;
 end_import
@@ -229,6 +243,22 @@ operator|.
 name|search
 operator|.
 name|TermRangeQuery
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|spans
+operator|.
+name|SpanBoostQuery
 import|;
 end_import
 
@@ -466,6 +496,7 @@ argument_list|>
 name|preRewriteFunc
 parameter_list|)
 block|{
+comment|// TODO Lucene needs a Query visitor API!  LUCENE-3041
 name|List
 argument_list|<
 name|CharacterRunAutomaton
@@ -604,6 +635,44 @@ argument_list|(
 operator|(
 operator|(
 name|ConstantScoreQuery
+operator|)
+name|query
+operator|)
+operator|.
+name|getQuery
+argument_list|()
+argument_list|,
+name|fieldMatcher
+argument_list|,
+name|lookInSpan
+argument_list|,
+name|preRewriteFunc
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|query
+operator|instanceof
+name|BoostQuery
+condition|)
+block|{
+name|list
+operator|.
+name|addAll
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|extractAutomata
+argument_list|(
+operator|(
+operator|(
+name|BoostQuery
 operator|)
 name|query
 operator|)
@@ -834,6 +903,46 @@ name|query
 operator|)
 operator|.
 name|getMatch
+argument_list|()
+argument_list|,
+name|fieldMatcher
+argument_list|,
+name|lookInSpan
+argument_list|,
+name|preRewriteFunc
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|lookInSpan
+operator|&&
+name|query
+operator|instanceof
+name|SpanBoostQuery
+condition|)
+block|{
+name|list
+operator|.
+name|addAll
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|extractAutomata
+argument_list|(
+operator|(
+operator|(
+name|SpanBoostQuery
+operator|)
+name|query
+operator|)
+operator|.
+name|getQuery
 argument_list|()
 argument_list|,
 name|fieldMatcher
